# SmallDemos

./: .gitignore  README.md
C#/: hello.cs  hellowin.cs
CUDA/Thrust/: CMakeLists.txt
CUDA/Thrust/src/: hello_thrust.cu
CUDA/hello/: compile  hello-world.cu
Cretu/: CMakeLists.txt  Makefile  ProcessVideoFrames  ProcessVideoFrames.cpp  README.md  segment.cu
Cretu/cuda/: segment.cu
Cretu/include/: GNG.h  opencv_util.h
Cretu/src/: GNG.cpp  ProcessVideoFrames.cpp  opencv_util.cpp
OpenCV/CustumCudaKernel/: Makefile  main.cu
OpenCV/GpuDraw/: GpuDraw.cpp  Makefile  gpuDraw.cu
OpenCV/GpuTrack/: CMakeLists.txt
OpenCV/GpuTrack/cusrc/: linear_snake.cu
OpenCV/GpuTrack/include/: linear_tracker.hpp
OpenCV/GpuTrack/src/: gpu_track.cpp
OpenCV/HelloCuda/: CMakeLists.txt  HelloGPU.cpp  Makefile  VideoReader.cpp
OpenCV/ProcessVideoFrames/: Makefile  ProcessVideoFrames.cpp  imgdiff.cu
OpenCV/PyCornerDetector/: .corners.py.swp  corners.py
OpenCV/PyProcessVideoFrame/: ProcessVideoFrames.py
OpenCV/PySaveVideo/: pySaveVideo.py
PyCretu/: CvUtil.py  FFPredict.py  GNG.py  GNGFilterlessSegment.py  GNGTrack.py  NG.py  PlotFFNNPredictions.py  README.md  Util.py  gr_plasticine_centre_100__filterless_segmented.avi  lab_segment_gng_pcentre.pickle  luv_segment_gng_pcentre.pickle  luv_segment_gng_scentre.pickle  plasticine_centre_100__filterless_segmented.avi  segment_gng_scentre.pickle  sponge_shortside_100__filterless_segmented.avi  yCrCb_segment_gng_pcentre.pickle
PyCretu/data/generated_videos/: a_plasticine_centre_100__filterless_segmented.avi  a_plasticine_longside_100__filterless_segmented.avi  a_plasticine_shortside_100__filterless_segmented.avi  g_plasticine_centre_100__filterless_segmented.avi  lab_plasticine_centre_100__filterless_segmented.avi  sponge_centre_100__filterless_segmented.avi  sponge_centre_100__result.avi  sponge_longside_100__filterless_segmented.avi  uv_plasticine_centre_100__filterless_segmented.avi
PyCretu/data/pickles/: bgr_segment_gng_pcentre.pickle  checkpoint  hsv_segment_gng_scentre.pickle  lab_segment_gng_pcentre.pickle  luv_1charac_segment_gng_scentre.pickle  luv_5charac_segment_gng_scentre.pickle  sponge_center_predictions.csv  sponge_ff.ckpt  sponge_set_1_track.npz
PyCretu/tests/: PlotTrackingData.py
PyImageChannels/: VideoChannels.py
PySplines/: TkSplines.py  WxRestrictedCubic.py  formulas.html
TermColorPrint/: Makefile  demo
TermColorPrint/include/: TermColorPrint.h
TermColorPrint/src/: TermColorPrint.cpp  demo.cpp
VisualizePCL/: CMakeLists.txt
VisualizePCL/src/: VisualizeCube.cpp
